<resources>
    <string name="app_name">eCommerce</string>
    <string name="applogo">appLOgo</string>
    <string name="find_discover_choose_and_buy_online">Find, Discover, Choose and Buy Online</string>
    <string name="already_have_an_account_login">Already Have An Account?Login</string>
    <string name="join_now">Join Now</string>
    <string name="logo">logo</string>
    <string name="phone_er">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="remember_m">Remember me</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>
    <string name="i_m_not_an_admin">I m not an admin</string>
    <string name="i_m_an_admin">I m an admin</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="button">Button</string>
    <string name="add_new_post">Add New Post</string>
    <string name="tshirts">tshirts</string>
    <string name="sports">sports</string>
    <string name="fd">fd</string>
    <string name="sweaters">sweaters</string>
    <string name="based_on_catogory">Based On Catogory</string>
    <string name="imageproduct">ImageProduct</string>
    <string name="product_nam">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="userna">UserName</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="rodct_name">Product Name</string>
    <string name="productimage">productImage</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="phone_nuber">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="aress">Address</string>
    <string name="productdD">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="product_dscription">Product Description</string>
    <string name="product_prie">Product Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="total_price">Total Price =</string>
    <string name="next">Next</string>
    <string name="roduct_name">Product Name</string>
    <string name="roduct_quantity">Product Quantity</string>
    <string name="prduct_price">Product Price</string>
    <string name="please_confirm_your_shipment_details">Please Confirm Your Shipment Details</string>
    <string name="please_write_your_shipment_details">Please Write Your Shipment Details</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="confirm">Confirm</string>
    <string name="congratulation_your_final_order_has_been_registered">Congratulation! your final order has been registered</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="out">Log Out</string>
    <string name="new_orders">New Orders</string>
    <string name="urname">UserName</string>
    <string name="address_city">Address,City</string>
    <string name="date_time">Date Time</string>
    <string name="show_this_order_products">Show This Order Products</string>
    <string name="username_orders">UserName Orders</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="serch">Search</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_product">Delete Product</string>
    <string name="forget_pas">Forget Password</string>
    <string name="set_security">Set Security</string>
    <string name="answer_the_security_question">Answer The Security Question</string>
    <string name="fdfd">Reset Password</string>
    <string name="favourite_color">Favourite Color</string>
    <string name="favourite_city">Favourite City</string>
    <string name="verify">Verify</string>
    <string name="seller_information">Seller Information</string>
    <string name="seller_registration_form">Seller Registration Form</string>
    <string name="rfre">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="wants_to_become_a_seller">Wants To become a seller?</string>
    <string name="jd">Log Out</string>
    <string name="asd">Add Product</string>
    <string name="selelr">Home</string>
    <string name="vinay_senwar">Vinay Senwar</string>
    <string name="about_the_developer">About the Developer</string>
    <string name="maintain_products">Maintain Products</string>
    <string name="welcome_dear_admin">Welcome Dear Admin</string>
    <string name="unverified_products">Unverified Products</string>
    <string name="status">Status</string>
    <string name="approve_orders">Approve Orders</string>
</resources>
