<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyers.ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_write_your_shipment_details"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        />




    <EditText
        android:id="@+id/shipment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name"
        android:autofillHints="SA" />
    <EditText
        android:id="@+id/shipment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_name"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/phone_number"
        android:autofillHints="SA" />
    <EditText
        android:id="@+id/shipment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_phone_number"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/address"
        android:autofillHints="SA"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/shipment_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_address"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/city"
        android:autofillHints="SA" />


    <Button
        android:id="@+id/confirm_final_order_bttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"/>

</RelativeLayout>