<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyers.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/r6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:id="@+id/reset_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fdfd"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/reset_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_the_security_question"
        android:gravity="center"
        android:textSize="26sp"
        android:layout_below="@id/reset_phone_number"
        android:layout_marginTop="25dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_phone_number"
        android:hint="@string/phone_number"
        android:layout_below="@id/r6"
        android:background="@drawable/inputs_design"
        android:padding="14dp"
        android:layout_margin="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_q1"
        android:hint="@string/favourite_color"
        android:layout_below="@id/reset_text"
        android:background="@drawable/inputs_design"
        android:padding="14dp"
        android:layout_margin="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_q2"
        android:hint="@string/favourite_city"
        android:layout_below="@id/reset_q1"
        android:background="@drawable/inputs_design"
        android:padding="14dp"
        android:layout_margin="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_bttn"
        android:text="@string/verify"
        android:layout_below="@id/reset_q2"
        android:background="@drawable/button"
        android:padding="14dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="15dp"/>


</RelativeLayout>