<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sellers.SellerLogin">


    <ImageView
        android:id="@+id/seller_login_img"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/seller_information"
        android:src="@drawable/sellerlogin"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/seller_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_login_form"
        android:gravity="center"
        android:layout_below="@+id/seller_login_img"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/holo_blue_dark"
        />

    <EditText
        android:id="@+id/seller_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_login_title"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:autofillHints="@string/name"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/seller_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_login_email"
        android:hint="@string/password"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:autofillHints="@string/name"
        android:layout_marginTop="10dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/seller_login_bttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@id/seller_login_password"
        android:text="Log In"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>
</RelativeLayout>