<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminAddNewProductActivity">
    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imageproduct"/>
    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="@string/product_name"
        android:autofillHints="hiny"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs_design"/>


    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="@string/product_description"
        android:autofillHints="hiny"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs_design"/>

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="@string/product_price"
        android:autofillHints="hiny"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/inputs_design"/>

    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:text="@string/add_product"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button"/>

</RelativeLayout>