<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/seller_product_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/seller_product_image_view"
            android:scaleType="centerCrop"
            android:layout_below="@+id/seller_product_name_view"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/productimage"
            />
        <TextView
            android:id="@+id/seller_product_price_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textSize="16sp"
            android:layout_below="@id/seller_product_image_view"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/seller_product_description_view"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:textSize="16sp"
            android:layout_below="@id/seller_product_price_view"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal" />


        <TextView
            android:id="@+id/seller_product_status_view"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="16sp"
            android:layout_below="@id/seller_product_description_view"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>