<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".buyers.SettingsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:id="@+id/app_bar_settings"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/close_account_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/update_account_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile"
        android:layout_below="@+id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/profile_image_change_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile_image"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/settings_profile_image"
        android:layout_marginTop="4dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image_change_button"
        android:hint="@string/phone_number"
        android:layout_margin="15dp"
        android:autofillHints="pj"
        android:padding="10dp"
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:hint="@string/full_name"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:autofillHints="pj"
        />

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_full_name"
        android:hint="@string/address"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:autofillHints="pj"
        />

    <Button
        android:id="@+id/settings_set_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_address"
        android:text="@string/set_security"
        android:background="@drawable/inputs_design"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:autofillHints="pj"
        />
</RelativeLayout>